crates/oxc_react_compiler/tests/snapshots/fbt__fbs-tag-in-default-parameter-ignores-body-binding.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbs-tag-in-default-parameter-ignores-body-binding.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "(BuildHIR::node.lowerReorderableExpression) Expression type `JSXElement` cannot be safely reordered", labels: [LabeledSpan { label: Some("`JSXElement` cannot be safely reordered"), span: Span { start: 52, end: 84 }, primary: true }], help: Some("Rewrite the highlighted code using syntax supported by React Compiler"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
