crates/oxc_react_compiler/tests/snapshots/fbt__fbs-tag-in-switch-discriminant.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbs-tag-in-switch-discriminant.js
---
import { fbs } from "fbt";
function Component(value) {
	switch (<fbs desc="Greeting">Hello</fbs>) {
		case 0: {
			const fbs = value;
			return fbs;
		}
		default: {
			return null;
		}
	}
}
