crates/oxc_react_compiler/tests/snapshots/fbt__fbt-as-local.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-as-local.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
import { identity } from "shared-runtime";
/**
* The fbt transform looks for callsites with an `fbt`-named callee, so the
* compiler must preserve local `fbt` binding names across nested scopes.
*/
function Foo(props) {
	const $ = _c(11);
	let t0;
	if ($[0] !== props.name) {
		t0 = (fbt) => fbt(`Hello, ${fbt.param("(key) name", identity(props.name))}!`, "(description) Greeting");
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const getText1 = t0;
	let t1;
	if ($[2] !== props.name) {
		t1 = (fbt) => fbt(`Goodbye, ${fbt.param("(key) name", identity(props.name))}!`, "(description) Greeting2");
		$[2] = props.name;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	const getText2 = t1;
	let t2;
	if ($[4] !== getText1) {
		t2 = getText1(fbt);
		$[4] = getText1;
		$[5] = t2;
	} else {
		t2 = $[5];
	}
	let t3;
	if ($[6] !== getText2) {
		t3 = getText2(fbt);
		$[6] = getText2;
		$[7] = t3;
	} else {
		t3 = $[7];
	}
	let t4;
	if ($[8] !== t2 || $[9] !== t3) {
		t4 = <div>{t2}{t3}</div>;
		$[8] = t2;
		$[9] = t3;
		$[10] = t4;
	} else {
		t4 = $[10];
	}
	return t4;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{ name: "Sathya" }]
};
