crates/oxc_react_compiler/tests/snapshots/fbt__fbt-param-with-newline.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-param-with-newline.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		const element = <fbt desc="Dialog to show to user">
      Hello{" "}
      <fbt:param name="a really long description
      that got split into multiple lines">
        {props.name}
      </fbt:param>
    </fbt>;
		t0 = element.toString();
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ name: "Jason" }]
};
