crates/oxc_react_compiler/tests/snapshots/fbt__fbt-params-complex-param-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-params-complex-param-value.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		t0 = <fbt desc="Dialog to show to user">
      Hello <fbt:param name="user name">{capitalize(props.name)}</fbt:param>
    </fbt>;
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
